--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,106 @@
-body {
+* {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(22, 71, 71);
+  color: #fff;
+  font-family: Tahoma, sans-serif;
+}
+
+.app {
+  background-color: rgb(30, 87, 87);
+  min-width: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem 3rem;
+  position: relative;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+}
+
+.main-header {
+  background-color: rgb(18, 54, 54);
+  padding: 15px 10px;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.timer {
+  align-self: flex-start;
+}
+
+.score {
+  align-self: flex-start;
+}
+
+.form {
+  margin: 20px 0;
+}
+
+.form input {
+  width: 300px;
+  font-size: 16px;
+  padding: 4px 2px;
+  font-family: inherit;
+  border: 0;
+}
+
+.form input:focus {
+  outline: 0;
+}
+
+.gameOver {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  background-color: inherit;
+  text-align: center;
+}
+
+.settings {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: inherit;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  transform: translateY(0);
+  transition: transform 0.8s ease;
+}
+
+.settings.hide {
+  transform: translateY(-200%);
+}
+
+.settings form {
+  width: 300px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+button:last-child {
+  cursor: pointer;
+  padding: 5px 10px;
+  font-family: inherit;
+  font-size: 16px;
 }
